--- a/src/task.css
+++ b/src/task.css
@@ -1,4 +1,5 @@
 .button-link {
+  font-size: 1em;
   background: none!important;
   border: none;
   padding: 0!important;
